--- a/chess-engine/src/app/board/board.component.css
+++ b/chess-engine/src/app/board/board.component.css
@@ -1913,16 +1913,15 @@
   cursor: auto;
 }
 
-.pawn-promotion-container {
+#pawn-promotion-container {
   position: absolute;
-  top: 61px;
-  left: 570px;
-  height: 204px;
-  width: 204px;
+  top: 59px;
+  height: 206px;
+  width: 208px;
   border-style: solid;
-  border-width: 4px;
+  border-width: 3.5px;
   background-color: white;
-  display: block;
+  display: none;
 }
 
 #queen-promotion {
